--- a/index.html
+++ b/index.html
@@ -700,6 +700,8 @@
             .contact-section h2 {
                 font-size: 2rem;  /* Match other section headings */
                 font-weight: 400; /* Match other section headings */
+                font-family: 'EB Garamond', serif;
+                font-size: 2.375em;
             }
 
             .contact-section hr {
