--- a/index.html
+++ b/index.html
@@ -698,8 +698,8 @@
             }
 
             .contact-section h2 {
-                font-size: 2rem;  /* Match other section headings */
-                font-weight: 400; /* Match other section headings */
+                color: white;
+                font-weight: 400;
                 font-family: 'EB Garamond', serif;
                 font-size: 2.375em;
             }
