--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             </section>
 
             <section class="about" id="about">
-                <h2 class="mb-4" data-aos="fade-left">About</h2>
-                <hr>
+                <h2 class="mb-5" data-aos="fade-left">About</h2>
+                <hr class="mb-5">
                 <p data-aos="fade-up">
                     My name is Vilhelm Martinsson and I'm a freelancing full-stack web developer currently based in Sweden. I build responsive and user-friendly web applications for small and medium sized businesses. Through our network of partners, we can offer various digital services.
                 </p>
@@ -117,8 +117,8 @@
             </section>
 
             <section class="services" id="services">
-                <h2 class="mb-4" data-aos="fade-left">Services</h2>
-                <hr>
+                <h2 class="mb-5" data-aos="fade-left">Services</h2>
+                <hr class="mb-5">
                 <div class="services-grid">
                     <div class="service-card" data-aos="fade-up">
                         <div class="service-icon">
@@ -169,8 +169,8 @@
             </section>
 
             <section class="technologies" id="technologies">
-                <h2 class="mb-4" data-aos="fade-left">Technologies</h2>
-                <hr>
+                <h2 class="mb-5" data-aos="fade-left">Technologies</h2>
+                <hr class="mb-5">
                 <div class="technologies-container" role="list">
                     <div class="column" role="listitem">
                         <div title="Python" data-aos="fade-left" data-aos-offset="10">
@@ -201,8 +201,8 @@
             </section>
 
             <section id="customers" class="customers">
-                <h2 class="mb-4" data-aos="fade-left">Customers</h2>
-                <hr>
+                <h2 class="mb-5" data-aos="fade-left">Customers</h2>
+                <hr class="mb-5">
                 <div class="grid-container">
                     <div class="card" data-aos="fade-left" data-aos-offset="10">
                         <div>
@@ -256,8 +256,8 @@
             </section>
 
             <section class="reviews" id="reviews">
-                <h2 class="mb-4" data-aos="fade-left">Reviews</h2>
-                <hr>
+                <h2 class="mb-5" data-aos="fade-left">Reviews</h2>
+                <hr class="mb-5">
                 <div>
                     <div class="mb-3 card" data-aos="fade-up">
                         <p class="mb-3">
@@ -289,8 +289,8 @@
 
         <footer>
             <div id="contact" class="contact-section">
-                <h2 class="mb-4" data-aos="fade-left">Contact</h2>
-                <hr class="section-divider">
+                <h2 class="mb-5" data-aos="fade-left">Contact</h2>
+                <hr class="mb-5">
                 <p>Have a project in mind? Let's discuss how we can help your business grow.</p>
                 <div class="social-container">
                     <ul class="social-links">
@@ -699,9 +699,6 @@
 
             .contact-section h2 {
                 color: white;
-                font-weight: 400;
-                font-family: 'EB Garamond', serif;
-                font-size: 2.375em;
             }
 
             .contact-section hr {
