--- a/index.html
+++ b/index.html
@@ -126,12 +126,9 @@
                 <hr class="mb-5">
                 <div class="services-grid">
                     <div class="service-card" data-aos="fade-up">
-                        <div class="service-icon">
-                            <i class="fas fa-desktop"></i>
-                        </div>
                         <div class="service-content">
                             <h3>Frontend Development</h3>
-                            <p>Modern, responsive user interfaces</p>
+                            <p>Intuitive experiences</p>
                             <ul class="service-details">
                                 <li>Vue.js / Nuxt.js applications</li>
                                 <li>Responsive design</li>
@@ -141,12 +138,9 @@
                         </div>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="service-icon">
-                            <i class="fas fa-server"></i>
-                        </div>
                         <div class="service-content">
                             <h3>Backend Development</h3>
-                            <p>Robust server-side solutions</p>
+                            <p>Engineering scalable solutions</p>
                             <ul class="service-details">
                                 <li>Python / Django applications</li>
                                 <li>RESTful APIs</li>
@@ -156,12 +150,9 @@
                         </div>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="200">
-                        <div class="service-icon">
-                            <i class="fas fa-brain"></i>
-                        </div>
                         <div class="service-content">
                             <h3>AI Integration</h3>
-                            <p>LLM-powered solutions</p>
+                            <p>Implementing intelligent systems</p>
                             <ul class="service-details">
                                 <li>OpenAI API integration</li>
                                 <li>Custom LLM implementations</li>
