--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <span class="star"></span>
                 <div class="mb-4" data-aos="fade" data-aos-duration="1500">
                     <img id="logo" alt="Logo" src="./static/images/vmwa-background.svg" />
-                    <h1 class="mb-3 hero-title">Vilhelm Martinsson</h1>
-                    <h2 class="mb-4 hero-subtitle">WEB APPLICATIONS</h2>
-                    <small class="hero-domain">www.vilhelmmartinsson.com</small>             
+                    <h1 class="mb-3 hero-title animate-slide-up">Vilhelm Martinsson</h1>
+                    <h2 class="mb-4 hero-subtitle animate-slide-up">WEB APPLICATIONS</h2>
+                    <small class="hero-domain animate-fade-in">www.vilhelmmartinsson.com</small>             
                 </div> 
             </section>
 
@@ -140,7 +140,7 @@
                     <div class="service-card" data-aos="fade-up" data-aos-delay="100">
                         <div class="service-content">
                             <h3>Backend Development</h3>
-                            <p>Engineering scalable solutions</p>
+                            <p>Scalable solutions</p>
                             <ul class="service-details">
                                 <li>Python / Django applications</li>
                                 <li>RESTful APIs</li>
@@ -152,7 +152,7 @@
                     <div class="service-card" data-aos="fade-up" data-aos-delay="200">
                         <div class="service-content">
                             <h3>AI Integration</h3>
-                            <p>Implementing intelligent systems</p>
+                            <p>Intelligent systems</p>
                             <ul class="service-details">
                                 <li>OpenAI API integration</li>
                                 <li>Custom LLM implementations</li>
