--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <div class="home-content">
                     <div class="text-block mt-4">
                         <p class="mb-3">
-                            For the past decades we have witnessed an amazing shift to digitalization. 
-                            The recent AI revolution has taken this transformation to unprecedented levels.
+                            <strong>For the past decades we have witnessed an amazing shift to digitalization. 
+                            The recent AI revolution has taken this transformation to unprecedented levels.</strong>
                         </p>
 
                         <p class="mb-3">
@@ -64,7 +64,7 @@
                         </p>
 
                         <p class="mb-3">
-                            A modern web agency should help to, not only survive, but thrive, 
+                            A modern web agency should help to not only survive, but thrive, 
                             in this landscape.
                         </p>
                     </div>
