--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             "Learn from the past to create the new"
                         </p>
                         <p class="attribution mb-4">
-                            - Japanese proverb
+                            - Confucius, Chinese philosopher (551-479 BCE)
                         </p>
                         <div class="kanji-breakdown">
                             <div class="kanji-item">
@@ -104,6 +104,46 @@
                                 <span class="meaning">new</span>
                             </div>
                         </div>
+                    </div>
+
+                    <!-- <div class="japanese-proverb">
+                        <p class="kanji-main mb-2">
+                            <strong>石の上にも三年</strong>
+                        </p>
+                        <p class="romaji mb-3">
+                            （いしのうえにもさんねん）
+                        </p>
+                        <p class="translation mb-2">
+                            "Sit on a rock for three years"
+                        </p>
+                        <p class="meaning mb-2">
+                            "Patience and perseverance lead to success"
+                        </p>
+                        <p class="attribution mb-4">
+                            - Japanese proverb
+                        </p>
+                        <div class="kanji-breakdown">
+                            <div class="kanji-item">
+                                <span class="kanji">石</span>
+                                <span class="reading">いし</span>
+                                <span class="meaning">stone</span>
+                            </div>
+                            <div class="kanji-item">
+                                <span class="kanji">上</span>
+                                <span class="reading">うえ</span>
+                                <span class="meaning">upon</span>
+                            </div>
+                            <div class="kanji-item">
+                                <span class="kanji">三</span>
+                                <span class="reading">さん</span>
+                                <span class="meaning">three</span>
+                            </div>
+                            <div class="kanji-item">
+                                <span class="kanji">年</span>
+                                <span class="reading">ねん</span>
+                                <span class="meaning">year</span>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
